Fixing dependencies issues

--- a/libs/infra-jsse-232/pom.xml
+++ b/libs/infra-jsse-232/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>com.paypal.jsse.test</groupId>
             <artifactId>infra-jsse-cache-provider</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
