--- a/app/pom.xml
+++ b/app/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>com.paypal.jsse.test</groupId>
             <artifactId>infra-jsse-cache-provider</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- third party dependencies -->
@@ -99,6 +100,7 @@
                 <dependency>
                     <groupId>com.paypal.jsse.test</groupId>
                     <artifactId>infra-jsse-232</artifactId>
+                    <version>${project.version}</version>
                 </dependency>
             </dependencies>
         </profile>
