--- a/app/pom.xml
+++ b/app/pom.xml
@@ -27,6 +27,12 @@
             <groupId>com.paypal.jsse.test</groupId>
             <artifactId>infra-jsse-cache-provider</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-simple</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- third party dependencies -->
