--- a/app/pom.xml
+++ b/app/pom.xml
@@ -106,7 +106,7 @@
                     <artifactId>infra-jsse</artifactId>
                     <version>8.212.10</version>
                     <scope>system</scope>
-                    <systemPath>${project.basedir}/libs/infra-jsse-8.212.10.jar</systemPath>
+                    <systemPath>${project.parent.basedir}/libs/infra-jsse-8.212.10.jar</systemPath>
                 </dependency>
             </dependencies>
         </profile>
@@ -118,7 +118,7 @@
                     <artifactId>infra-jsse-cache-provider</artifactId>
                     <version>2.2.0-AZUL</version>
                     <scope>system</scope>
-                    <systemPath>${project.basedir}/libs/infra-jsse-cache-provider-2.2.0-AZUL.jar</systemPath>
+                    <systemPath>${project.parent.basedir}/libs/infra-jsse-cache-provider-2.2.0-AZUL.jar</systemPath>
                 </dependency>
                 <dependency>
                     <groupId>com.paypal.jsse.test</groupId>
