keeping the libraries in the respective project basedir

--- a/mock-ssl-context/pom.xml
+++ b/mock-ssl-context/pom.xml
@@ -38,7 +38,7 @@
             <artifactId>infra-jsse-cache-provider</artifactId>
             <version>2.2.0-AZUL</version>
             <scope>system</scope>
-            <systemPath>${project.parent.basedir}/libs/infra-jsse-cache-provider-2.2.0-AZUL.jar</systemPath>
+            <systemPath>${project.basedir}/libs/infra-jsse-cache-provider-2.2.0-AZUL.jar</systemPath>
         </dependency>
     </dependencies>
 
