--- a/app/pom.xml
+++ b/app/pom.xml
@@ -29,11 +29,11 @@
 
 
         <!-- third party dependencies -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -79,6 +79,18 @@
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.paypal.jsse.test</groupId>
+            <artifactId>infra-jsse-cache-provider</artifactId>
+            <version>2.2.0-AZUL</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/infra-jsse-cache-provider-2.2.0-AZUL.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.paypal.jsse.test</groupId>
+            <artifactId>mock-ssl-context</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -120,35 +132,10 @@
         <profile>
             <id>mock-jsse</id>
             <dependencies>
-                <dependency>
-                    <groupId>com.paypal.jsse.test</groupId>
-                    <artifactId>infra-jsse-cache-provider</artifactId>
-                    <version>2.2.0-AZUL</version>
-                    <scope>system</scope>
-                    <systemPath>${project.basedir}/libs/infra-jsse-cache-provider-2.2.0-AZUL.jar</systemPath>
-                </dependency>
-                <dependency>
-                    <groupId>com.paypal.jsse.test</groupId>
-                    <artifactId>mock-ssl-context</artifactId>
-                    <version>${project.version}</version>
-                </dependency>
+
             </dependencies>
         </profile>
-        <profile>
-            <id>infra-jsse</id>
-            <dependencies>
-                <dependency>
-                    <groupId>com.paypal.jsse.test</groupId>
-                    <artifactId>km-ssl-context</artifactId>
-                    <version>${project.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>com.paypal.security</groupId>
-                    <artifactId>infra-jsse-cache-provider</artifactId>
-                    <version>2.1.0</version>
-                </dependency>
-            </dependencies>
-        </profile>
+
     </profiles>
 
 </project>
