--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.paypal.jsse.test</groupId>
-    <artifactId>jsse-tester</artifactId>
+    <artifactId>jsse-prime-test</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>app</module>
-        <module>mock-ssl-context</module>
-        <module>commons</module>
-        <module>km-ssl-context</module>
+        <module>reproducer</module>
     </modules>
 
     <properties>
